fix align flex & use variable padding

--- a/src/Components/Base/Schedule/styles.module.scss
+++ b/src/Components/Base/Schedule/styles.module.scss
@@ -1,5 +1,6 @@
 .activity_wrapper {
   display: flex;
   justify-content: space-around;
+  align-content: space-between;
   flex-wrap: wrap;
 }
