--- a/src/Components/Card/styles.module.scss
+++ b/src/Components/Card/styles.module.scss
@@ -47,7 +47,7 @@
   background-color: $dark-blue;
   border-radius: $sm-b-radius;
   margin-top: -$sm-b-radius;
-  padding: 1.5rem;
+  padding: $md-padding;
   
   .card_title {
     margin-bottom: 1.25rem;
